support nvidia metrics
